# Prekladac

./: .gitignore  CMakeLists.txt  README.md  functions_design_v1.txt
LLTableGenerator/: CMakeLists.txt  fileoutput.cpp  fileoutput.h  generator.cpp  nonterminal.cpp  nonterminal.h  rule.cpp  rule.h  symbol.cpp  symbol.h  terminal.cpp  terminal.h
src/: HelloWorld.c  main.c
src/LLTableGenerator/: CMakeLists.txt  generator.cpp  nonterminal.cpp  nonterminal.h  rule.cpp  rule.h  symbol.cpp  symbol.h  terminal.cpp  terminal.h
src/LexicalAnalyzer/: CMakeLists.txt  LexicalAnalyzer.c  LexicalAnalyzer.h  LexicalFSM.c  LexicalFSM.h
src/Lexical_analyzer/: Lexical_FSM.c  Lexical_FSM.h  Lexical_analyzer.c  Lexical_analyzer.h
src/Syntax/: Arrays.c  CMakeLists.txt  LLTable.c  LLTable.h  LLTableSizes.h  NonTerminal.h  SyntaxAnalyzer.c  SyntaxAnalyzer.h  Terminal.h
src/SyntaxAnalyzer/: Arrays.c  BottomToTop.c  BottomToTop.h  CMakeLists.txt  CodeGeneration.c  CodeGeneration.h  GenerateASS.c  GenerateASS.h  LLTable.c  LLTable.h  NonTerminal.h  PrecedenceTable.c  PrecedenceTable.h  SemanticActions.c  SemanticActions.h  SyntaxAnalyzer.c  SyntaxAnalyzer.h  SyntaxFunctions.c  SyntaxFunctions.h  Terminal.h
src/Utils/: Buffers.c  Buffers.h  CMakeLists.txt  Token.c  Token.h  data.c  data.h  dlist.h  element.h  functiondata.c  functiondata.h  hashtable.c  hashtable.h  jesus.c  jesus.h  list.c  list.h  listelement.h  logger.h  node.c  node.h  scope_list.c  scope_list.h  scope_stack.c  scope_stack.h  semantictype.c  semantictype.h  stack.c  stack.h  symbolelement.c  symbolelement.h  symtable.c  symtable.h  symtable_testonly.h  vector.c  vector.h  vector_testonly.h
src/files/: BuiltInFunctions.txt  functions_design_v1.txt
tests/: HelloWorldTest.cpp
tests/LexicalAnalyzer/: CMakeLists.txt  LexicalAnalyzerTests.cpp
tests/SyntaxAnalyzer/: CMakeLists.txt  SyntaxAnalyzerTests.cpp
tests/Utils/: CMakeLists.txt  UtilsTests.cpp
tests/files/: testExpression1.txt  testExpression2.txt  testExpression3.txt  testExpression4.txt  testExpression5.txt  testExpression6.txt  testExpression7.txt  testExpression8.txt  testSource0.txt  testSource1.txt  testSource10.txt  testSource11.txt  testSource12.txt  testSource13.txt  testSource14.txt  testSource15.txt  testSource16.txt  testSource17.txt  testSource18.txt  testSource19.txt  testSource2.txt  testSource20.txt  testSource21.txt  testSource22.txt  testSource23.txt  testSource3.txt  testSource5.txt  testSource6.txt  testSource7.txt  testSource8.txt  testSource9.txt  testSourceWrong1.txt  testSourceWrong10.txt  testSourceWrong11.txt  testSourceWrong12.txt  testSourceWrong13.txt  testSourceWrong14.txt  testSourceWrong15.txt  testSourceWrong16.txt  testSourceWrong17.txt  (+17 more)
